Project_Updated Code, Package & Deployment Sheet

--- a/SourceCode/2023/August2023/Yash/RE_RPAChallenge/Framework/InitAllApplications.xaml
+++ b/SourceCode/2023/August2023/Yash/RE_RPAChallenge/Framework/InitAllApplications.xaml
@@ -118,7 +118,7 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log message (Initialize applications)" sap:VirtualizedContainerService.HintSize="483.2,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;Opening applications...&quot;]" />
-    <ui:GetRobotAsset TimeoutMS="{x:Null}" AssetName="[in_Config(&quot;RPAChallenge_URL&quot;).ToString]" CacheStrategy="None" DisplayName="Get Asset" FolderPath="[in_Config(&quot;Orchestrator_FolderName&quot;).ToString]" sap:VirtualizedContainerService.HintSize="483.2,143.2" sap2010:WorkflowViewState.IdRef="GetRobotAsset_1">
+    <ui:GetRobotAsset TimeoutMS="{x:Null}" AssetName="[in_Config(&quot;RPAChallenge_URL&quot;).ToString]" CacheStrategy="None" DisplayName="Get Asset" FolderPath="[in_Config(&quot;OrchestratorQueueFolder&quot;).ToString]" sap:VirtualizedContainerService.HintSize="483.2,143.2" sap2010:WorkflowViewState.IdRef="GetRobotAsset_1">
       <ui:GetRobotAsset.Value>
         <OutArgument x:TypeArguments="x:String">[in_RPAChallenge_URL]</OutArgument>
       </ui:GetRobotAsset.Value>
